results file modified

--- a/results.ipynb
+++ b/results.ipynb
@@ -13,12 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from __future__ import annotations\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from __future__ import annotations\n",
     "from random import sample\n",
     "import warnings"
    ]
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,29 +800,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_scores = create_mean_table('IXI_12', 5, 100).pivot_table(index=[\"type\", \"sort\"]).transpose()['test_scores']\n",
-    "sample_sizes = create_mean_table('IXI_12', 5, 100).pivot_table(index=[\"type\", \"sort\"]).transpose()['sample_size']\n",
-    "p_vals = create_mean_table('IXI_12', 5, 100).pivot_table(index=[\"type\", \"sort\"]).transpose()['p_vals']"
+    "dataset = \"IXI_12\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_scores_std = create_std_table('IXI_12', 5, 100).pivot_table(index=[\"type\", \"sort\"]).transpose()['test_scores']\n",
-    "sample_sizes_std = create_std_table('IXI_12', 5, 100).pivot_table(index=[\"type\", \"sort\"]).transpose()['sample_size']\n",
-    "p_vals_std = create_std_table('IXI_12', 5, 100).pivot_table(index=[\"type\", \"sort\"]).transpose()['p_vals']"
+    "test_scores = create_mean_table(dataset, 5, 100).pivot_table(index=[\"type\", \"sort\"]).transpose()['test_scores']\n",
+    "sample_sizes = create_mean_table(dataset, 5, 100).pivot_table(index=[\"type\", \"sort\"]).transpose()['sample_size']\n",
+    "p_vals = create_mean_table(dataset, 5, 100).pivot_table(index=[\"type\", \"sort\"]).transpose()['p_vals']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_scores_std = create_std_table(dataset, 5, 100).pivot_table(index=[\"type\", \"sort\"]).transpose()['test_scores']\n",
+    "sample_sizes_std = create_std_table(dataset, 5, 100).pivot_table(index=[\"type\", \"sort\"]).transpose()['sample_size']\n",
+    "p_vals_std = create_std_table(dataset, 5, 100).pivot_table(index=[\"type\", \"sort\"]).transpose()['p_vals']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +916,7 @@
        "pareto        -11.96 -12.16 -11.46 -11.29 -10.98"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -961,50 +970,50 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>90-10</th>\n",
-       "      <td>0.27</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.04</td>\n",
+       "      <td>0.2661</td>\n",
+       "      <td>0.2075</td>\n",
+       "      <td>0.0974</td>\n",
+       "      <td>0.0727</td>\n",
+       "      <td>0.0420</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>adaptivesplit</th>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.04</td>\n",
+       "      <td>0.0700</td>\n",
+       "      <td>0.0309</td>\n",
+       "      <td>0.0157</td>\n",
+       "      <td>0.0219</td>\n",
+       "      <td>0.0397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>halfsplit</th>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.01</td>\n",
+       "      <td>0.0349</td>\n",
+       "      <td>0.0192</td>\n",
+       "      <td>0.0049</td>\n",
+       "      <td>0.0016</td>\n",
+       "      <td>0.0075</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pareto</th>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.01</td>\n",
+       "      <td>0.1187</td>\n",
+       "      <td>0.1079</td>\n",
+       "      <td>0.0351</td>\n",
+       "      <td>0.0191</td>\n",
+       "      <td>0.0080</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 0    1    2    3    4\n",
-       "sort                                  \n",
-       "90-10         0.27 0.21 0.10 0.07 0.04\n",
-       "adaptivesplit 0.07 0.03 0.02 0.02 0.04\n",
-       "halfsplit     0.03 0.02 0.00 0.00 0.01\n",
-       "pareto        0.12 0.11 0.04 0.02 0.01"
+       "                   0      1      2      3      4\n",
+       "sort                                            \n",
+       "90-10         0.2661 0.2075 0.0974 0.0727 0.0420\n",
+       "adaptivesplit 0.0700 0.0309 0.0157 0.0219 0.0397\n",
+       "halfsplit     0.0349 0.0192 0.0049 0.0016 0.0075\n",
+       "pareto        0.1187 0.1079 0.0351 0.0191 0.0080"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1058,66 +1067,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>90-10</th>\n",
-       "      <td>360.00</td>\n",
-       "      <td>397.00</td>\n",
-       "      <td>440.00</td>\n",
-       "      <td>487.00</td>\n",
-       "      <td>540.00</td>\n",
+       "      <td>44</td>\n",
+       "      <td>58</td>\n",
+       "      <td>77</td>\n",
+       "      <td>101</td>\n",
+       "      <td>135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>adaptivesplit</th>\n",
-       "      <td>246.35</td>\n",
-       "      <td>294.89</td>\n",
-       "      <td>356.88</td>\n",
-       "      <td>426.42</td>\n",
-       "      <td>496.99</td>\n",
+       "      <td>33</td>\n",
+       "      <td>39</td>\n",
+       "      <td>60</td>\n",
+       "      <td>92</td>\n",
+       "      <td>135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>halfsplit</th>\n",
-       "      <td>200.00</td>\n",
-       "      <td>221.00</td>\n",
-       "      <td>244.00</td>\n",
-       "      <td>271.00</td>\n",
-       "      <td>300.00</td>\n",
+       "      <td>24</td>\n",
+       "      <td>32</td>\n",
+       "      <td>43</td>\n",
+       "      <td>56</td>\n",
+       "      <td>75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pareto</th>\n",
-       "      <td>320.00</td>\n",
-       "      <td>353.00</td>\n",
-       "      <td>391.00</td>\n",
-       "      <td>433.00</td>\n",
-       "      <td>480.00</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>68</td>\n",
+       "      <td>90</td>\n",
+       "      <td>120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>total</th>\n",
-       "      <td>400.00</td>\n",
-       "      <td>442.00</td>\n",
-       "      <td>489.00</td>\n",
-       "      <td>542.00</td>\n",
-       "      <td>600.00</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>86</td>\n",
+       "      <td>113</td>\n",
+       "      <td>150</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   0      1      2      3      4\n",
-       "sort                                            \n",
-       "90-10         360.00 397.00 440.00 487.00 540.00\n",
-       "adaptivesplit 246.35 294.89 356.88 426.42 496.99\n",
-       "halfsplit     200.00 221.00 244.00 271.00 300.00\n",
-       "pareto        320.00 353.00 391.00 433.00 480.00\n",
-       "total         400.00 442.00 489.00 542.00 600.00"
+       "               0  1  2   3   4\n",
+       "sort                          \n",
+       "90-10         44 58 77 101 135\n",
+       "adaptivesplit 33 39 60  92 135\n",
+       "halfsplit     24 32 43  56  75\n",
+       "pareto        39 52 68  90 120\n",
+       "total         49 65 86 113 150"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.options.display.float_format='{:,.0f}'.format\n",
-    "dataset = 'abide_12'    \n",
+    "pd.options.display.float_format='{:,.0f}'.format   \n",
     "data = pd.read_csv('./Data/' + dataset + '/results.csv', delimiter=',', encoding='utf-8')\n",
     "sample_sizes['total'] = mean_window(data['truncate_sample_size'], 5, 100)\n",
     "sample_sizes.transpose()"
@@ -1125,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1167,62 +1175,62 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>90-10</th>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>adaptivesplit</th>\n",
-       "      <td>41.4715</td>\n",
-       "      <td>47.2593</td>\n",
-       "      <td>41.1714</td>\n",
-       "      <td>31.1629</td>\n",
-       "      <td>20.7179</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>7.34</td>\n",
+       "      <td>12.33</td>\n",
+       "      <td>9.50</td>\n",
+       "      <td>4.26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>halfsplit</th>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pareto</th>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    0       1       2       3       4\n",
-       "sort                                                 \n",
-       "90-10          0.0000  0.0000  0.0000  0.0000  0.0000\n",
-       "adaptivesplit 41.4715 47.2593 41.1714 31.1629 20.7179\n",
-       "halfsplit      0.0000  0.0000  0.0000  0.0000  0.0000\n",
-       "pareto         0.0000  0.0000  0.0000  0.0000  0.0000"
+       "                 0    1     2    3    4\n",
+       "sort                                   \n",
+       "90-10         0.00 0.00  0.00 0.00 0.00\n",
+       "adaptivesplit 1.63 7.34 12.33 9.50 4.26\n",
+       "halfsplit     0.00 0.00  0.00 0.00 0.00\n",
+       "pareto        0.00 0.00  0.00 0.00 0.00"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.options.display.float_format='{:,0f}'.format\n",
+    "pd.options.display.float_format='{:,.2f}'.format   \n",
     "sample_sizes_std.transpose()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1264,50 +1272,50 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>90-10</th>\n",
-       "      <td>0.0721</td>\n",
-       "      <td>0.0691</td>\n",
-       "      <td>0.0726</td>\n",
-       "      <td>0.0698</td>\n",
-       "      <td>0.0538</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>3.82</td>\n",
+       "      <td>3.09</td>\n",
+       "      <td>2.41</td>\n",
+       "      <td>2.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>adaptivesplit</th>\n",
-       "      <td>0.0422</td>\n",
-       "      <td>0.0436</td>\n",
-       "      <td>0.0465</td>\n",
-       "      <td>0.0545</td>\n",
-       "      <td>0.0491</td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>2.08</td>\n",
+       "      <td>2.07</td>\n",
+       "      <td>1.91</td>\n",
+       "      <td>1.91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>halfsplit</th>\n",
-       "      <td>0.0318</td>\n",
-       "      <td>0.0342</td>\n",
-       "      <td>0.0286</td>\n",
-       "      <td>0.0267</td>\n",
-       "      <td>0.0242</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>1.52</td>\n",
+       "      <td>1.55</td>\n",
+       "      <td>2.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pareto</th>\n",
-       "      <td>0.0503</td>\n",
-       "      <td>0.0576</td>\n",
-       "      <td>0.0472</td>\n",
-       "      <td>0.0475</td>\n",
-       "      <td>0.0420</td>\n",
+       "      <td>2.95</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>2.23</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>1.55</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   0      1      2      3      4\n",
-       "sort                                            \n",
-       "90-10         0.0721 0.0691 0.0726 0.0698 0.0538\n",
-       "adaptivesplit 0.0422 0.0436 0.0465 0.0545 0.0491\n",
-       "halfsplit     0.0318 0.0342 0.0286 0.0267 0.0242\n",
-       "pareto        0.0503 0.0576 0.0472 0.0475 0.0420"
+       "                 0    1    2    3    4\n",
+       "sort                                  \n",
+       "90-10         4.25 3.82 3.09 2.41 2.08\n",
+       "adaptivesplit 2.20 2.08 2.07 1.91 1.91\n",
+       "halfsplit     1.98 1.75 1.52 1.55 2.22\n",
+       "pareto        2.95 3.51 2.23 1.64 1.55"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1361,35 +1369,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>90-10</th>\n",
-       "      <td>0.1930</td>\n",
-       "      <td>0.1757</td>\n",
-       "      <td>0.1650</td>\n",
-       "      <td>0.1411</td>\n",
-       "      <td>0.0936</td>\n",
+       "      <td>0.2589</td>\n",
+       "      <td>0.2238</td>\n",
+       "      <td>0.1443</td>\n",
+       "      <td>0.1129</td>\n",
+       "      <td>0.1003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>adaptivesplit</th>\n",
-       "      <td>0.0423</td>\n",
-       "      <td>0.0323</td>\n",
-       "      <td>0.0496</td>\n",
-       "      <td>0.0610</td>\n",
-       "      <td>0.0510</td>\n",
+       "      <td>0.1112</td>\n",
+       "      <td>0.0744</td>\n",
+       "      <td>0.0375</td>\n",
+       "      <td>0.0403</td>\n",
+       "      <td>0.0857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>halfsplit</th>\n",
-       "      <td>0.0372</td>\n",
-       "      <td>0.0202</td>\n",
-       "      <td>0.0130</td>\n",
-       "      <td>0.0058</td>\n",
-       "      <td>0.0013</td>\n",
+       "      <td>0.0745</td>\n",
+       "      <td>0.0645</td>\n",
+       "      <td>0.0247</td>\n",
+       "      <td>0.0076</td>\n",
+       "      <td>0.0490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pareto</th>\n",
-       "      <td>0.0814</td>\n",
-       "      <td>0.1138</td>\n",
-       "      <td>0.0961</td>\n",
-       "      <td>0.0556</td>\n",
-       "      <td>0.0330</td>\n",
+       "      <td>0.1402</td>\n",
+       "      <td>0.1677</td>\n",
+       "      <td>0.0768</td>\n",
+       "      <td>0.0388</td>\n",
+       "      <td>0.0352</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1398,13 +1406,13 @@
       "text/plain": [
        "                   0      1      2      3      4\n",
        "sort                                            \n",
-       "90-10         0.1930 0.1757 0.1650 0.1411 0.0936\n",
-       "adaptivesplit 0.0423 0.0323 0.0496 0.0610 0.0510\n",
-       "halfsplit     0.0372 0.0202 0.0130 0.0058 0.0013\n",
-       "pareto        0.0814 0.1138 0.0961 0.0556 0.0330"
+       "90-10         0.2589 0.2238 0.1443 0.1129 0.1003\n",
+       "adaptivesplit 0.1112 0.0744 0.0375 0.0403 0.0857\n",
+       "halfsplit     0.0745 0.0645 0.0247 0.0076 0.0490\n",
+       "pareto        0.1402 0.1677 0.0768 0.0388 0.0352"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1438,12 +1446,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8811ba1480f6d566d78fac8c08c25b99dfcaf4ba3173ce5c5a691ccb596d999f"
+    "hash": "bd67e02a31e0c33338dbdb47c2302fc43705fa41c885a318eed0375ff3830e34"
    }
   }
  },
